fix: names split across roles columns on mobile
resolves https://cmuabtech.slack.com/archives/CKLMNB5PX/p1772575002112979?thread_ts=1772572001.761109&cid=CKLMNB5PX

changing each span from inline to inline-block keeps the entire name in same column

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -134,6 +134,10 @@ table.eventslist td:first-child {
 
     .mobile-cols-2 {
       column-count: 2;
+
+      .role-holder {
+        display: inline-block;
+      }
     }
 
     tr:not(.eventslist-week-marker) td:first-child {
